@@ -1,6 +1,10 @@
 package com.lukecreator.BonziBot.Script.Model;
 
+import java.lang.reflect.InvocationTargetException;
+
+import com.lukecreator.BonziBot.BonziBot;
 import com.lukecreator.BonziBot.BonziUtils;
+import com.lukecreator.BonziBot.InternalLogger;
 import com.lukecreator.BonziBot.Gui.GuiScriptEditor;
 import com.lukecreator.BonziBot.Script.Editor.EditorCategories;
 import com.lukecreator.BonziBot.Script.Editor.StatementDescriptor;
@@ -19,18 +23,19 @@ public class ScriptParser {
 		public ScriptParseException(String msg) {
 			this.msg = msg;
 		}
+		@Override
 		public String getMessage() {
 			return this.msg;
 		}
 	}
 	
-	public static ScriptStatementCollection parseCode(Script parent, String... lines) throws ScriptParseException {
+	public static ScriptStatementCollection parseCode(Script parent, BonziBot bb, String... lines) throws ScriptParseException {
 		ScriptStatementCollection ssc = new ScriptStatementCollection(parent);
 		for(String line: lines)
-			ssc.add(parseLine(line));
+			ssc.add(parseLine(line, bb));
 		return ssc;
 	}
-	public static ScriptStatement parseLine(String line) throws ScriptParseException {
+	public static ScriptStatement parseLine(String line, BonziBot bb) throws ScriptParseException {
 		if(line.startsWith(GuiScriptEditor.ARROW))
 			line = line.substring(1);
 		
@@ -50,23 +55,34 @@ public class ScriptParser {
 		ScriptStatement statement = null;
 		for(StatementDescriptor sd: EditorCategories.getAllPossibleStatements()) {
 			String sdKeyword = sd.getKeyword();
+			
 			if(sdKeyword == null)
 				continue;
 			if(!keyword.equalsIgnoreCase(sdKeyword))
 				continue;
+			
 			try {
-				statement = sd.internalClass.newInstance();
+				statement = sd.internalClass.getDeclaredConstructor().newInstance();
 			} catch (InstantiationException e) {
-				e.printStackTrace();
+				InternalLogger.printError(e);
 				return null;
-				//throw new ScriptParseException("Internal error. '" + e.getMessage() + "'");
 			} catch (IllegalAccessException e) {
-				e.printStackTrace();
+				InternalLogger.printError(e);
 				return null;
-				//throw new ScriptParseException("Internal error. '" + e.getMessage() + "'");
+			} catch (IllegalArgumentException e) {
+				InternalLogger.printError(e);
+			} catch (InvocationTargetException e) {
+				InternalLogger.printError(e);
+			} catch (NoSuchMethodException e) {
+				InternalLogger.printError(e);
+			} catch (SecurityException e) {
+				InternalLogger.printError(e);
 			}
 			
 		}
+		
+		if(statement instanceof ScriptGetter)
+			((ScriptGetter)statement).bonziInstance = bb;
 		
 		return statement;
 	}
